--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -1,4 +1,12 @@
 quartz.thread.count=3
+#mongo.host=ds041188.mongolab.com
+#mongo.port=41188
+mongo.host=127.0.0.1
+mongo.port=27017
+mongo.db=news
+mongo.user=test
+mongo.password=test123
+
 JDBC.ConnectionURL=jdbc:mysql://localhost/news?user=root&password=123123&useUnicode=true&characterEncoding=utf-8
 JDBC.Password=123123
 JDBC.Driver=com.mysql.jdbc.Driver
