--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>${spring-version}</version>
         </dependency>
 
+		<dependency>
+		 <groupId>org.springframework.data</groupId>
+		 <artifactId>spring-data-mongodb</artifactId>
+		 <version>1.2.1.RELEASE</version>
+		</dependency>
+		
         <!-- spring required libs -->
         <dependency>
             <groupId>cglib</groupId>
@@ -184,7 +190,7 @@
           <target>1.6</target>
         </configuration>
       </plugin>
-      <!--
+      
       <plugin>
 		<groupId>org.mortbay.jetty</groupId>
 		<artifactId>maven-jetty-plugin</artifactId>
@@ -201,7 +207,7 @@
 				</connector>
 			</connectors>
 		</configuration>
-	  </plugin>  -->
+	  </plugin>  
 	  <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
