add hadoop analyze

--- a/pom.xml
+++ b/pom.xml
@@ -206,7 +206,14 @@
 			<artifactId>gson</artifactId>
 			<version>2.2.4</version>
 		</dependency>
-                        
+        <dependency>   
+	          <groupId>com.sun</groupId>   
+	          <artifactId>tools</artifactId>   
+	          <version>1.6.0</version>   
+	          <scope>system</scope>   
+	          <systemPath>C:/Program Files/Java/jdk1.6.0_26/lib/tools.jar</systemPath>   
+	   </dependency>
+                           
   </dependencies>
   
   <build>
